[package]
name = "rs-text2tokens"
version = "0.1.0"
edition = "2024"

description = "Converts the text to the segments."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-text2tokens"
homepage = "https://github.com/takanoriyanagitani/rs-text2tokens"
documentation = "https://docs.rs/rs-text2tokens/latest"
keywords = ["text", "token", "segment"]

exclude = [
  "rs-text2tokens.wasm",
  "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.unicode-segmentation]
version = "1"
default-features = false
features = [
]
